--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
-    "history": "^1.13.0",
     "file-loader": "^0.8.5",
+    "history": "^1.13.0",
     "hoist-non-react-statics": "^1.0.3",
     "http-proxy": "^1.12.0",
     "less": "^2.5.3",
@@ -101,6 +101,7 @@
     "pretty-error": "^1.2.0",
     "query-string": "^3.0.0",
     "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.3",
     "react-bootstrap": "^0.27.3",
     "react-document-meta": "^2.0.0",
     "react-dom": "^0.14.1",
@@ -108,6 +109,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
     "react-router-bootstrap": "^0.19.3",
+    "react-toolbox": "^0.13.4",
     "redux": "^3.0.4",
     "redux-form": "^3.0.12",
     "redux-router": "1.0.0-beta5",
